--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: moongraphics
 Type: Package
 Title: Create Formatted Graphics in 1 Line
-Version: 0.1.0
+Version: 1.0.0
 Authors@R: c(
     person(
       "Nicole", "Meyer",
@@ -14,8 +14,8 @@ Description: moongraphics is a graph building package that helps to keep your co
   By wrapping all necessary graph logics into one simple function, moongraphics allows for users to easily create graphs with the 
   standard built-in theme that are aesthetically pleasing, without needing to worry about remembering all the ggplot2 syntax 
   to do that.
-License: What license is it under?
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
-Imports: dplyr
+Imports: dplyr, ggplot2, cli, utils
